[updated] convert html to vue

--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -39,6 +39,6 @@ $content-padding-x:             1rem;
 $content-padding-y:             5rem;
 $content-padding-yb:            4rem;
 
-$screen-bg:   #FBFBFB;
-$body-bg:       $gray-200;
-$body-color:    #121212 !default;
+// $screen-bg:   #FBFBFB;
+// $body-bg:       $gray-200;
+// $body-color:    #121212 !default;
